--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "cy:open": "cypress open",
     "cy:parallel": "cypress run --browser chrome --headless --env configFile=docker",
     "cy:parallel-local": "cypress run --browser chrome --headless --env configFile=staging",
-    "prepare": "husky install",
     "preinstall": "npx only-allow yarn",
     "upload-sourcemaps:frontend": "NODE_OPTIONS=--max-old-space-size=6144 ./scripts/upload-sourcemaps.sh",
     "translate": "node ./scripts/translate.js"
@@ -58,28 +57,10 @@
     "@bookipi/signit-document-generator": "^0.0.1-20250910042353",
     "@capacitor/geolocation": "^7.1.0",
     "@capacitor/preferences": "^7.0.0",
-    "@growthbook/growthbook": "^1.3.1",
-    "@hello-pangea/dnd": "^18.0.1",
-    "@hookform/resolvers": "^1.3.7",
     "@sentry/react": "^9.1.0",
-    "@stripe/connect-js": "^3.3.21",
-    "@stripe/react-connect-js": "^3.3.20",
-    "@tiptap/extension-underline": "^2.11.5",
-    "@tiptap/pm": "^2.11.5",
-    "@tiptap/react": "^2.11.5",
-    "@tiptap/starter-kit": "^2.11.5",
-    "@vapi-ai/web": "^2.2.4",
-    "@wavesurfer/react": "^1.0.10",
-    "@zxing/browser": "^0.1.5",
-    "@zxing/library": "^0.21.3",
     "apollo-link": "^1.2.14",
-    "auto-bind": "^5.0.1",
     "axios": "^1.7.9",
-    "branch-sdk": "^2.86.3",
     "capacitor-plugin-safe-area": "^4.0.0",
-    "cypress-iframe": "^1.0.1",
-    "dompurify": "^3.2.4",
-    "firebase": "^11.3.1",
     "framer-motion": "^12.23.12",
     "graphql": "^16.10.0",
     "i18next": "^24.2.2",
@@ -87,83 +68,26 @@
     "i18next-chained-backend": "^4.6.2",
     "i18next-http-backend": "^3.0.2",
     "i18next-resources-to-backend": "^1.2.1",
-    "iframe-pubsub": "^1.0.21",
     "jodit-react": "^5.2.14",
-    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
-    "libphonenumber-js": "^1.12.8",
-    "material-ui-dropzone": "^3.5.0",
-    "mocha-junit-reporter": "^2.2.1",
-    "papaparse": "^5.5.2",
-    "pdfobject": "^2.3.1",
-    "query-string": "^9.2.1",
     "react": "^18.2.0",
-    "react-apple-login": "^1.1.6",
-    "react-avatar-editor": "^13.0.2",
-    "react-beautiful-dnd": "^13.1.1",
-    "react-content-loader": "^7.0.2",
-    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
-    "react-dropzone": "^14.3.5",
-    "react-hook-form": "^6.13.1",
     "react-i18next": "^15.4.0",
-    "react-input-autosize": "^3.0.0",
-    "react-joyride": "^2.9.3",
     "react-lottie": "^1.2.10",
-    "react-minimal-pie-chart": "^9.1.0",
     "react-pdf": "^9.2.1",
-    "react-pdfobject": "^1.2.0",
-    "react-rewards": "^2.1.0",
-    "react-select": "^5.10.0",
-    "react-select-async-paginate": "^0.7.9",
-    "react-signature-pad-wrapper": "^4.1.0",
-    "react-sticky-el": "^2.1.1",
-    "react-toastify": "^11.0.3",
-    "react-truncate": "^2.4.0",
-    "use-debounce": "^10.0.4",
-    "uuid": "^11.0.5",
-    "validate.js": "^0.13.1",
-    "wavesurfer.js": "^7.9.4",
-    "yup": "^1.6.1",
-    "zustand": "^5.0.3"
+    "react-signature-pad-wrapper": "^4.1.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
-    "@commitlint/cli": "^19.7.1",
-    "@commitlint/config-conventional": "^19.7.1",
-    "@date-io/core": "^1.3.11",
-    "@date-io/date-fns": "v1",
-    "@faker-js/faker": "^9.5.0",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@material-ui/lab": "^4.0.0-alpha.61",
-    "@material-ui/pickers": "^3.3.11",
-    "@material-ui/styles": "^4.11.5",
     "@rollup/plugin-commonjs": "^28.0.6",
-    "@sentry/cli": "^2.45.0",
     "@tailwindcss/container-queries": "^0.1.1",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@testing-library/react-hooks": "^8.0.1",
     "@vitejs/plugin-react": "^4.7.0",
-    "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.21",
-    "chart.js": "^4.4.7",
     "clsx": "^2.1.1",
-    "core-js": "^3.40.0",
-    "cypress": "^14.0.3",
-    "cypress-dotenv": "^3.0.1",
-    "cypress-file-upload": "^5.0.8",
-    "cypress-mochawesome-reporter": "^3.8.2",
-    "cypress-multi-reporters": "^2.0.5",
-    "cypress-split": "^1.24.13",
-    "cypress-xpath": "^2.0.1",
     "date-fns": "^2.29.3",
     "dotenv": "^16.4.7",
-    "draft-js": "^0.11.7",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-react-app": "^7.0.1",
@@ -175,53 +99,15 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-google-translate": "^0.0.114",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "history": "^4.10.1",
-    "husky": ">=6",
-    "identity-obj-proxy": "^3.0.0",
-    "immutable": "^5.0.3",
-    "jquery": "^3.7.1",
-    "jsdom": "^25.0.1",
-    "jss": "^10.10.0",
-    "jss-rtl": "^0.3.0",
-    "lint-staged": ">=10",
     "lodash": "^4.17.21",
-    "mochawesome": "^7.1.3",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.43",
-    "mongodb": "^6.13.0",
-    "node-fetch": "^3.3.2",
-    "nprogress": "^0.2.0",
-    "only-allow": "^1.2.1",
     "openai": "^4.85.1",
     "prettier": "^2.8.8",
-    "prismjs": "^1.29.0",
-    "prop-types": "^15.8.1",
-    "qs": "^6.14.0",
-    "re-resizable": "^6.10.3",
-    "react-app-polyfill": "^3.0.0",
-    "react-color": "^2.19.3",
-    "react-custom-scrollbars": "^4.2.1",
-    "react-google-login": "^5.2.2",
-    "react-helmet": "^6.1.0",
-    "react-markdown": "^9.0.3",
-    "react-perfect-scrollbar": "^1.5.8",
-    "react-places-autocomplete": "^7.3.0",
-    "react-redux": "^7.1.3",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "react-signature-canvas": "^1.1.0-alpha.1",
-    "react-table": "^7.8.0",
-    "redux": "^4.0.4",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-mock-store": "^1.5.4",
-    "redux-thunk": "^2.3.0",
-    "rewire": "^6.0.0",
     "rollup-plugin-visualizer": "^6.0.3",
     "sass": "^1.90.0",
-    "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.3.3",
     "tailwindcss-inner-border": "^0.2.0",
-    "typicons.font": "^2.0.9",
     "vite": "^7.1.2",
     "vite-plugin-svgr": "^4.3.0",
     "vitest": "^3.2.4"
